fix: working on mobile responsive of customer page

--- a/backend/public/css/app.css
+++ b/backend/public/css/app.css
@@ -7221,6 +7221,10 @@ details.collapse summary::-webkit-details-marker {
     width: 66.666667%;
   }
 
+  .md\:w-80 {
+    width: 20rem;
+  }
+
   .md\:max-w-xl {
     max-width: 36rem;
   }
